train SVC with all the available data and then predicting and showing group with prices

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -192,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.61 s, sys: 956 ms, total: 6.57 s\n",
-      "Wall time: 6.59 s\n"
+      "CPU times: user 5.29 s, sys: 859 ms, total: 6.15 s\n",
+      "Wall time: 6.15 s\n"
      ]
     }
    ],
@@ -497,8 +497,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.5 s, sys: 1.4 s, total: 18.9 s\n",
-      "Wall time: 16.5 s\n"
+      "CPU times: user 17.1 s, sys: 1.41 s, total: 18.5 s\n",
+      "Wall time: 15.5 s\n"
      ]
     }
    ],
@@ -667,6 +667,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "109348b8",
+   "metadata": {},
+   "source": [
+    "# Picking the Support Vector Machine for prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fe46d43e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2014, 569)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# converting all the records into vectors\n",
+    "X_vec = tfidf_predict.fit_transform(X).toarray()\n",
+    "X_vec.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "94cfb27e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(gamma=1.0, kernel='sigmoid', probability=True)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# training the SVC\n",
+    "svc = SVC(kernel='sigmoid', gamma=1.0, probability=True)\n",
+    "svc.fit(X_vec, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3bbe7071",
    "metadata": {},
    "source": [
@@ -675,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "15ad7a33",
    "metadata": {},
    "outputs": [
@@ -780,7 +834,7 @@
        "4  4.3588  24.50   42.99              pro lens kit phone camera photography  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "d02e335e",
    "metadata": {},
    "outputs": [],
@@ -810,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "be5822c5",
    "metadata": {},
    "outputs": [
@@ -826,7 +880,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "5b70be76",
    "metadata": {},
    "outputs": [
@@ -848,7 +902,7 @@
        "(341, 781)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "3df935af",
    "metadata": {},
    "outputs": [
@@ -889,7 +943,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "5258cad4",
    "metadata": {},
    "outputs": [
@@ -911,7 +965,7 @@
        "(341, 341)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "bbc61551",
    "metadata": {},
    "outputs": [],
@@ -949,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "741afbc7",
    "metadata": {},
    "outputs": [
@@ -963,7 +1017,7 @@
        " 'The Luxe Collection Almond Butter Cookies']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "eb874351",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "7dc78d3c",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "b1dfa403",
    "metadata": {},
    "outputs": [],
@@ -1118,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
@@ -1171,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "a203652f",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1312,7 @@
        "4  I’m more of a tea person 🍵$$$Any specialty tea...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "207cd5f1",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1392,7 @@
        "4          50  I’m more of a tea person 🍵$$$Any specialty tea..."
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "d36f2bb4",
    "metadata": {},
    "outputs": [
@@ -1358,28 +1412,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preference: I don’t drink coffee or tea 🤭$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$Hard liquor (for example -- Whiskey, Bourbon, Rum, Tequila) 🥃$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$  🐶 I have a pet dog $$$ $$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$ $$$Send 👍$$$L\n",
-      "Order Price: 50\n",
+      "Preference: I'm a coffee person ☕️$$$I love to make pour over/specialty coffees from coffee beans 🙋‍♀️☕️$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  Chocolates, Candies and baked treats 🍫 🍪 🍩 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$I like everything 👍$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$  $$$ $$$Have kid/s Girl-2yrs boy-3mo years old$$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$ $$$Send 👍\n",
+      "-\n",
+      "Order Price: 40\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (2132,424), Total Amount Charged: 57.0$\n",
+      "Gift Box: 2 => Product Id: (2426,2999), Total Amount Charged: 52.0$\n",
+      "Gift Box: 3 => Product Id: (1220,2241), Total Amount Charged: 33.7$\n",
       "\n",
-      "Recommended Gift Boxes\n",
-      "--------------------------\n",
-      "['4722,2887', 73.99000000000001]\n",
-      "['1840', 68.0]\n",
-      "['4610,2887', 65.99]\n"
+      "================================================\n",
+      "\n",
+      "Preference: I'm a coffee person ☕️$$$I love to make pour over/specialty coffees from coffee beans 🙋‍♀️☕️$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  Chocolates, Candies and baked treats 🍫 🍪 🍩 $$$ $$$Send 👍$$$Hard liquor (for example -- Whiskey, Bourbon, Rum, Tequila) 🥃$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$ $$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$  $$$ $$$Have kid/s LA Rams Dodgers and Lakers years old$$$Send 👍\n",
+      "-\n",
+      "Order Price: 40\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (278,2241,4722), Total Amount Charged: 65.94$\n",
+      "Gift Box: 2 => Product Id: (2132,424), Total Amount Charged: 57.0$\n",
+      "Gift Box: 3 => Product Id: (2426,2999), Total Amount Charged: 52.0$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I don’t drink coffee or tea 🤭$$$ Chocolates, Candies and baked treats 🍫 🍪 🍩 $$$  Healthy Sweet Treats 🍯 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$Red or White Wine 🍷🍾 (and similar drinks)$$$ 📸 I enjoy capturing pictures &amp; videos $$$  📱🏡 Smart home gadgets are so cool. I love them. $$$  🧘‍♀️🕯💆‍♀️🤸‍♂️I’m into health, wellness &amp; body care $$$  $$$  🐶 I have a pet dog $$$ $$$Have kid/s Boys teenagers years old$$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$ $$$Send 👍\n",
+      "-\n",
+      "Order Price: 40\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (3168), Total Amount Charged: 103.0$\n",
+      "Gift Box: 2 => Product Id: (3663,2080), Total Amount Charged: 95.5$\n",
+      "Gift Box: 3 => Product Id: (2352,3641), Total Amount Charged: 38.46$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I'm a coffee person ☕️$$$I love to make pour over/specialty coffees from coffee beans 🙋‍♀️☕️$$$ Healthy Sweet Treats 🍯 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$Hard liquor (for example -- Whiskey, Bourbon, Rum, Tequila) 🥃$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$  🧘‍♀️🕯💆‍♀️🤸‍♂️I’m into health, wellness &amp; body care $$$ $$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$ $$$Send 👍\n",
+      "-\n",
+      "Order Price: 30\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (2132,2345,1840), Total Amount Charged: 109.0$\n",
+      "Gift Box: 2 => Product Id: (278,4783,4722), Total Amount Charged: 65.99000000000001$\n",
+      "Gift Box: 3 => Product Id: (2426,3641), Total Amount Charged: 40.0$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I’m more of a tea person 🍵$$$Any specialty tea is good for me 🍵$$$ Chocolates, Candies and baked treats 🍫 🍪 🍩 $$$ $$$Send 👍$$$Red or White Wine 🍷🍾 (and similar drinks)$$$ 🧘‍♀️🕯💆‍♀️🤸‍♂️I’m into health, wellness &amp; body care $$$  🐶 I have a pet dog $$$ $$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$ $$$Send 👍\n",
+      "-\n",
+      "Order Price: 50\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (1826,424), Total Amount Charged: 68.0$\n",
+      "Gift Box: 2 => Product Id: (1858,2241,2352), Total Amount Charged: 41.41$\n",
+      "Gift Box: 3 => Product Id: (2994,3677), Total Amount Charged: 27.5$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I'm a coffee person ☕️$$$I like to brew regular ground coffee ☕️$$$ Chocolates, Candies and baked treats 🍫 🍪 🍩 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$I do not drink alcohol ☝️$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$  $$$  🐶 I have a pet dog $$$ $$$Have kid/s Boy 15 Girl 13 years old$$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$  $$$ $$$Have kid/s Buckeyes years old$$$Send 👍\n",
+      "-\n",
+      "Order Price: 30\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (245,424), Total Amount Charged: 60.989999999999995$\n",
+      "Gift Box: 2 => Product Id: (4825,2999), Total Amount Charged: 43.95$\n",
+      "Gift Box: 3 => Product Id: (1308,2241), Total Amount Charged: 33.7$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I'm a coffee person ☕️$$$I like to brew regular ground coffee ☕️$$$ Healthy Sweet Treats 🍯 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$Hard liquor (for example -- Whiskey, Bourbon, Rum, Tequila) 🥃$$$ 📱🏡 Smart home gadgets are so cool. I love them. $$$ $$$Send 👍$$$ I have a thing for classic pens 🖋 $$$ $$$Send 👍\n",
+      "-\n",
+      "Order Price: 100\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (245,2345,1840), Total Amount Charged: 112.99$\n",
+      "Gift Box: 2 => Product Id: (1308,4783), Total Amount Charged: 33.75$\n",
+      "Gift Box: 3 => Product Id: (2594,2080), Total Amount Charged: 33.5$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I don’t drink coffee or tea 🤭$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$ Peanuts $$$ $$$Send 👍$$$Red or White Wine 🍷🍾 (and similar drinks)$$$ 📸 I enjoy capturing pictures &amp; videos $$$  🧘‍♀️🕯💆‍♀️🤸‍♂️I’m into health, wellness &amp; body care $$$ $$$Send 👍$$$ I love being outdoors 🚶‍♀️ $$$ $$$Send 👍\n",
+      "-\n",
+      "Order Price: 50\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (3663,2887), Total Amount Charged: 121.0$\n",
+      "Gift Box: 2 => Product Id: (3168), Total Amount Charged: 103.0$\n",
+      "Gift Box: 3 => Product Id: (2352,2887), Total Amount Charged: 61.46$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I’m more of a tea person 🍵$$$Any specialty tea is good for me 🍵$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$I like everything 👍$$$ 📸 I enjoy capturing pictures &amp; videos $$$  📱🏡 Smart home gadgets are so cool. I love them. $$$ $$$Send 👍$$$Oh yeah! 🤘$$$L\n",
+      "-\n",
+      "Order Price: 50\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (1826,2887), Total Amount Charged: 74.0$\n",
+      "Gift Box: 2 => Product Id: (2994,2887), Total Amount Charged: 59.0$\n",
+      "Gift Box: 3 => Product Id: (1858,2887), Total Amount Charged: 49.0$\n",
+      "\n",
+      "================================================\n",
+      "\n",
+      "Preference: I'm a coffee person ☕️$$$I like to brew regular ground coffee ☕️$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  Healthy Sweet Treats 🍯 $$$ $$$Send 👍$$$I like everything 👍$$$ 📸 I enjoy capturing pictures &amp; videos $$$  🐶 I have a pet dog $$$ $$$Send 👍$$$I hate being indoors (love being outdoors) 🚶‍♂$$$M\n",
+      "-\n",
+      "Order Price: 100\n",
+      "-\n",
+      "Recommended Gift Boxes:--------------------------\n",
+      "Gift Box: 1 => Product Id: (245,3168), Total Amount Charged: 128.99$\n",
+      "Gift Box: 2 => Product Id: (2594,3663), Total Amount Charged: 98.0$\n",
+      "Gift Box: 3 => Product Id: (1308,2352), Total Amount Charged: 41.21$\n",
+      "\n",
+      "================================================\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "index = 30\n",
+    "for i in range(0, 10):\n",
+    "    preference = df_test_sample['Preferences'][i]\n",
+    "    order_price = df_test_sample['OrderPrice'][i]\n",
     "\n",
-    "test_str = df_test_sample['Preferences'][index]\n",
-    "order_price = df_test_sample['OrderPrice'][index]\n",
-    "\n",
-    "print(\"Preference:\", test_str)\n",
-    "print(\"Order Price:\", order_price)\n",
-    "print(\"\\nRecommended Gift Boxes\\n--------------------------\")\n",
-    "for box in gift_boxes(test_str, order_price):\n",
-    "    print(box)"
+    "    print(\"Preference:\", preference)\n",
+    "    print(\"-\\nOrder Price:\", order_price)\n",
+    "    print(\"-\\nRecommended Gift Boxes:--------------------------\")\n",
+    "    gift_box = gift_boxes(preference, order_price)\n",
+    "    for j in range(len(gift_box)):\n",
+    "        print(f\"Gift Box: {j + 1} => Product Id: ({gift_box[j][0]}), Total Amount Charged: {gift_box[j][1]}$\") \n",
+    "    print(\"\\n================================================\\n\")"
    ]
   }
  ],
